# MiniBox

./: ARCHITECTURE.md  Cargo.toml  MODULES.md  PRODUCT.md  README.md  RELEASE.md  TODO.md
.github/workflows/: ci.yml
config/: example.yaml
examples/launchd/: ai.minibox.plist
examples/systemd/: minibox.service
src/: admin.rs  bootstrap.rs  error.rs  health.rs  lib.rs  logging.rs  main.rs  metrics.rs  operations.rs  relay.rs  runtime.rs  subscription.rs
src/adapter/: clash.rs
src/adapter/clash/: mod.rs  model.rs  parse.rs  translate.rs
src/config/: external.rs  internal.rs  load.rs  mod.rs
src/listener/: admission.rs  binding.rs  mod.rs  plan.rs  runtime.rs  serve.rs
src/protocol/: mod.rs
src/protocol/http_connect/: codec.rs  error.rs  handler.rs  mod.rs  parser.rs  types.rs
src/protocol/socks5/: codec.rs  error.rs  handler.rs  mod.rs  parser.rs  types.rs
src/provider/: cache.rs
src/session/: context.rs  entry.rs  error.rs  http_connect.rs  mod.rs  plan.rs  socks5.rs  target.rs
src/upstream/: connection.rs  direct.rs  mod.rs  resolve.rs  target.rs  trojan.rs
