[package]
name = "minibox"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
native-tls = "0.2.14"
serde = { version = "=1.0.228", features = ["derive"] }
serde_yaml = { path = "vendor/serde_yaml" }
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-native-tls = "0.3.1"
